[build-system]
requires = ["setuptools>=66.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonnets"
version = "0.1.0"
dependencies = [
    "Flask>=2.0"
]
requires-python = "~=3.12"
authors = [
    {name = "Brandon Hampstead", email = "the.hampster05@gmail.com"}
]
description = "A simple Flask app using setuptools"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["flask", "setuptools", "python"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "flake8>=5.0",
]

[project.scripts]
flask-setuptools-app = "src.app:main"


